option java_package = "org.apache.hadoop.yarn.proto";
option java_outer_classname = "SimulatorProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package hadoop.yarn;

import "posum_protos.proto";

service SimulatorProtocolService {
    rpc handleSimpleRequest (SimpleRequestProto) returns (SimpleResponseProto);
}